# mux

./: .gitignore  Cargo.toml  agents.md  readme.md  roadmap.md
.github/workflows/: ci.yml
crates/mux-acp/: Cargo.toml
crates/mux-acp/src/: lib.rs
crates/mux-cli/: Cargo.toml
crates/mux-cli/src/: main.rs
crates/mux-config/: Cargo.toml
crates/mux-config/src/: lib.rs
crates/mux-diff/: Cargo.toml
crates/mux-diff/src/: lib.rs
crates/mux-drivers/: Cargo.toml
crates/mux-drivers/mux-driver-candle/: Cargo.toml
crates/mux-drivers/mux-driver-candle/src/: lib.rs
crates/mux-drivers/mux-driver-llamacpp/: Cargo.toml
crates/mux-drivers/mux-driver-llamacpp/src/: lib.rs
crates/mux-drivers/mux-driver-vllm/: Cargo.toml
crates/mux-drivers/mux-driver-vllm/src/: lib.rs
crates/mux-drivers/src/: lib.rs
crates/mux-fs/: Cargo.toml
crates/mux-fs/src/: lib.rs
crates/mux-planner/: Cargo.toml
crates/mux-planner/src/: lib.rs
crates/mux-router/: Cargo.toml
crates/mux-router/src/: lib.rs
crates/mux-telemetry/: Cargo.toml
crates/mux-telemetry/src/: lib.rs
docs/: networking.md
examples/zed/: settings-local.jsonc  settings-relay.jsonc
fixtures/: models.yaml
fixtures/prompts/: system.txt
script/: gh-issues.sh  gh-networking-core.sh  gh-networking-issues.sh
xtask/: Cargo.toml
xtask/src/: main.rs
